--- a/index.html
+++ b/index.html
@@ -538,10 +538,7 @@
     
 <div class="pergunta" id="pergunta7">
   <div style="text-align:left; margin-bottom:8px;">
-    <strong>
-      O número que você pensou está nesta tabela? 
-      <span class="audio-icon" id="audio7" style="cursor:pointer;">🔊</span>
-    </strong>
+    <strong>O número que você pensou está nesta tabela? <span class="audio-icon" style="font-size:20px; cursor:pointer; margin-left:10px;">🔊</span></strong>
   </div>
   <div class="tabela-bloco">
     <h3 style="color:#00bcd4;">Tabela 7</h3>
@@ -560,7 +557,73 @@
           <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">72</td>
           <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">73</td>
         </tr>
-        <!-- restante da tabela omitido para brevidade -->
+        <tr>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">74</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">75</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">76</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">77</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">78</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">79</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">80</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">81</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">82</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">83</td>
+        </tr>
+        <tr>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">84</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">85</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">86</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">87</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">88</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">89</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">90</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">91</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">92</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">93</td>
+        </tr>
+        <tr>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">94</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">95</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">96</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">97</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">98</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">99</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">100</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">101</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">102</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">103</td>
+        </tr>
+        <tr>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">104</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">105</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">106</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">107</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">108</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">109</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">110</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">111</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">112</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">113</td>
+        </tr>
+        <tr>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">114</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">115</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">116</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">117</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">118</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">119</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">120</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">121</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">122</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">123</td>
+        </tr>
+        <tr>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">124</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">125</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">126</td>
+          <td style="padding:4px 8px; border:1px solid #ddd; text-align:center;">127</td>
+          <td colspan="6"></td>
+        </tr>
       </table>
     </div>
   </div>
@@ -570,19 +633,6 @@
     <label><input type="radio" name="p7" value="nao"> Não</label>
   </div>
 </div>
-
-<script>
-  document.getElementById('audio7').addEventListener('click', function() {
-    if ('speechSynthesis' in window) {
-      const texto = "O número que você pensou está nesta tabela?";
-      const utterance = new SpeechSynthesisUtterance(texto);
-      utterance.lang = 'pt-BR';
-      window.speechSynthesis.speak(utterance);
-    } else {
-      alert("Seu navegador não suporta síntese de voz.");
-    }
-  });
-</script>
     
    <div class="pergunta" id="pergunta8">
   <div style="text-align:left; margin-bottom:8px;">
