--- a/index.html
+++ b/index.html
@@ -774,60 +774,58 @@
         document.getElementById('resultado').innerHTML = 'Por favor, responda todas as perguntas.<br><br><button onclick="participarNovamente()" class="enviar">🔄 Participar novamente</button>';
       }
     }
-</script>
-      function participarNovamente(){
-      document.getElementById('formCartas').reset();
-      document.getElementById('resultado').textContent = 'Nenhuma carta revelada ainda';
-      window.scrollTo({top:0, behavior:'smooth'});
-    }
+<script>
+  // ===== Função de narração =====
+  function narrar(texto) {
+    window.speechSynthesis.cancel();
+    const fala = new SpeechSynthesisUtterance(texto);
+    fala.lang = 'pt-BR';
+    window.speechSynthesis.speak(fala);
+  }
 
-    // ===== Função de narração =====
-    function narrar(texto) {
-      window.speechSynthesis.cancel();
-      const fala = new SpeechSynthesisUtterance(texto);
-      fala.lang = 'pt-BR';
-      window.speechSynthesis.speak(fala);
-    }
+  // ===== Exibir resultado e botão de áudio =====
+  function mostrarResultado(numeroDescoberto) {
+    const resultado = document.getElementById('resultado');
+    resultado.innerHTML = `
+      🎉 O número que você pensou é <b>${numeroDescoberto}</b>! 
+      <button id="btnRepetirAudio" style="margin-left:10px; cursor:pointer;">🔊</button>
+      <br><br>
+      <button onclick="participarNovamente()" class="enviar">🔄 Participar novamente</button>
+    `;
 
-    // ===== Exibir resultado e botão de áudio =====
-    function mostrarResultado(numeroDescoberto) {
-      const resultado = document.getElementById('resultado');
-      resultado.innerHTML = `
-        🎉 O número que você pensou é <b>${numeroDescoberto}</b>! 
-        <button id="btnRepetirAudio" style="margin-left:10px; cursor:pointer;">🔊</button>
-        <br><br>
-        <button onclick="participarNovamente()" class="enviar">🔄 Participar novamente</button>
-      `;
+    // dispara confete
+    confetti({
+      particleCount: 160,
+      spread: 80,
+      origin: { y: 0.6 }
+    });
 
-      // dispara confete
-      confetti({ particleCount: 160, spread: 80, origin: { y: 0.6 } });
+    // fala o resultado automaticamente
+    narrar("O número que você pensou é " + numeroDescoberto);
 
-      // fala o resultado automaticamente
+    // adiciona evento ao botão 🔊
+    document.getElementById("btnRepetirAudio").addEventListener("click", () => {
       narrar("O número que você pensou é " + numeroDescoberto);
+    });
+  }
 
-      // adiciona evento ao botão 🔊
-      document.getElementById("btnRepetirAudio").addEventListener("click", () => {
-        narrar("O número que você pensou é " + numeroDescoberto);
-      });
+  // ===== Estrelas cintilando =====
+  (function(){
+    var container = document.querySelector('.estrelas');
+    for(var i=0;i<80;i++){
+      var s = document.createElement('div');
+      s.className='estrela';
+      s.style.top=(Math.random()*100)+'vh';
+      s.style.left=(Math.random()*100)+'vw';
+      s.style.width=(1+Math.random()*3)+'px';
+      s.style.height=s.style.width;
+      s.style.background='rgba(255,255,255,'+(0.2+Math.random()*0.8)+')';
+      s.style.position='absolute';
+      s.style.borderRadius='50%';
+      s.style.animation='piscar '+(1+Math.random()*3)+'s infinite alternate';
+      container.appendChild(s);
     }
-
-    // estrelas cintilando
-    (function(){
-      var container = document.querySelector('.estrelas');
-      for(var i=0;i<80;i++){
-        var s = document.createElement('div');
-        s.className='estrela';
-        s.style.top=(Math.random()*100)+'vh';
-        s.style.left=(Math.random()*100)+'vw';
-        s.style.width=(1+Math.random()*3)+'px';
-        s.style.height=s.style.width;
-        s.style.background='rgba(255,255,255,'+(0.2+Math.random()*0.8)+')';
-        s.style.position='absolute';
-        s.style.borderRadius='50%';
-        s.style.animation='piscar '+(1+Math.random()*3)+'s infinite alternate';
-        container.appendChild(s);
-      }
-    })();
-  </script>
+  })();
+</script>
 </body>
 </html>
